client/my-sites/customer-home/cards/actions/quick-links/style.scss
.quick-links__boxes {
	margin-left: -16px;
	margin-right: -16px;

	@include breakpoint( '>480px' ) {
		margin-left: -24px;
		margin-right: -24px;
	}
}

.quick-links.card {
	padding-bottom: 0;

	.card-heading {
		margin-bottom: 16px;
	}
}

.quick-links.foldable-card {
	.foldable-card {
		@include breakpoint( '<480px' ) {
			&__header {
				min-height: 0;
				padding: 12px 16px;
			}
		}

		&__content {
			border: 0;
			padding-bottom: 0;
			padding-top: 0;
		}
	}
}
@include breakpoint( '>480px' ) {
	.quick-links.card.foldable-card {
		margin-top: 0;
		padding-bottom: 0;

		.foldable-card__header {
			padding: 0 24px;
		}

		.foldable-card__content {
			padding: 0 24px;
		}
	}
}

.card.quick-links__action-box {
	display: flex;
	align-items: center;
	transition: all 0.1s;

	.quick-links__action-box-image {
		display: flex;
		flex-shrink: 0;
		align-items: center;
		width: 24px;
		margin-right: 16px;
	}

	.quick-links__action-box-icon {
		width: 24px;
		height: 24px;
		fill: var( --color-neutral-60 );
		transition: all 0.1s;
	}

	.quick-links__action-box-label {
		color: var( --color-text );
		font-size: 16px;
	}

	.quick-links__action-box-subtitle {
		color: var( --color-text-subtle );
		font-size: 14px;
		display: none;

		@include breakpoint( '>480px' ) {
			display: block;
		}
	}

	&:hover {
		background: var( --color-neutral-0 );

		.quick-links__action-box-icon {
			fill: var( --color-neutral-80 );
		}
	}
}

.quick-links__action-box-label {
	font-size: 16px;
}

